--- a/WebContent/WEB-INF/jsp/assortment/t3-superaddin.html
+++ b/WebContent/WEB-INF/jsp/assortment/t3-superaddin.html
@@ -71,54 +71,7 @@
 		</div>
 		<!--顶部E-->
 
-		<!--导航栏S-->
-		<div class="topnav">
-			<table>
-				<tr>
-					<td>
-						<a href="#" onclick="table1()">
-							课程
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table2()">
-							行业法规
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table3()">
-							事故报告管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table4()">
-							管理分类
-						</a>
-					</td>
-					<td id="chart">
-						<a href="#" onclick="table5()">
-							统计图
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table6()">
-							账户管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table7()">
-							记录管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table8()">
-							题库
-						</a>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<!--导航栏E-->
+
 		
 		<div class="t">
 			<div class="t3 main">
@@ -140,19 +93,17 @@
 						</tr>
 					</table>
 				</div>
-				<div class="addinca">
+				<div class="addin">
 					<form action="">
 						<div class="ch">
 							<span>类别：</span>
-							<select name="">
-								<option value="">行业</option>
-								<option value="">原因</option>
-							</select><br /><br />
+							<span style="width: 28px;">行业</span>
+							<br /><br />
 							<span>名称：</span>	
 							<input type="text" name="" id="" value="" />
 						</div>
 						<div class="po">
-							<input type="button" name="" id="" value="提交" />
+							<input type="button" name="" id="" value="修改" />
 						</div>
 					</form>
 				</div>
