--- a/WebContent/WEB-INF/jsp/superadmin/t5-superw.html
+++ b/WebContent/WEB-INF/jsp/superadmin/t5-superw.html
@@ -59,106 +59,49 @@
 	</head>
 
 	<body>
-		<!--顶部S-->
-		<div class="head">
-			<!--logo-->
-			<div class="im"></div>
-			<!--退出-->
-			<div class="fr exit">
-				<input type="button" name="" id="" />
-			</div>
-
-		</div>
-		<!--顶部E-->
-
-		<!--导航栏S-->
-		<div class="topnav">
-			<table>
-				<tr>
-					<td>
-						<a href="#" onclick="table1()">
-							课程
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table2()">
-							行业法规
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table3()">
-							事故报告管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table4()">
-							管理分类
-						</a>
-					</td>
-					<td id="chart">
-						<a href="#" onclick="table5()">
-							统计图
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table6()">
-							账户管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table7()">
-							记录管理
-						</a>
-					</td>
-					<td>
-						<a href="#" onclick="table8()">
-							题库
-						</a>
-					</td>
-				</tr>
-			</table>
-		</div>
-		<!--导航栏E-->
 		
 		<div class="t">
-			<div class="t2 main">
-				<div class="sac">
-					<div class="search">
+			<div class="t5 main">
+				<div class="fl w">
+					<div class="menu" onclick="">
+						政府
+					</div>
+					<div class="menu" onclick="gg()">
+						企业
+					</div>
+					<div class="chc">
+						<ul>
+							<li id="builder" class="rank">**企业</li>
+						</ul>
+					</div>
+					<div class="menu" onclick="">
+						分析人员
+					</div>
+					<div class="menu" onclick="">
+						审核人员
+					</div>
+				</div>
+				
+				<div class="sac fr">
+					<div class="search fr">
 						<input type="text" name="" id="" value="" />
 					</div>
 					<div class="accident">
 						<form action="">
 							<table>
 								<tr>
-									<th>报告编号</th>
-									<th>报告名称</th>
-									<th>事故等级</th>
-									<th>发生时间</th>
-									<th>发生地点</th>
-									<th>人员伤亡</th>
-									<th>财产损失</th>
-									<th>所属行业</th>
+									<th>账号</th>
+									<th>姓名</th>
+									<th>年龄</th>
+									<th>性别</th>
+									<th>身份证号</th>
+									<th>公司</th>
+									<th>职位</th>
+									<th>工号</th>
 									<th>删除</th>
-								</tr>
-								
-								<tr>
-									<td>1</td>
-									<td>2</td>
-									<td>3</td>
-									<td>4</td>
-									<td>5</td>
-									<td>6</td>
-									<td>7</td>
-									<td>8</td>
-									<td class="de">
-										<a href="#" download="statute.txt"></a>
-									</td>
 								</tr>
 							</table>
 						</form>
-						<div class="upload">
-							<a href="#" onclick="addaccidents()"></a>
-						</div>
 					</div>
 				</div>
 			</div>
