新建统计图html文件

--- a/WebContent/font.html
+++ b/WebContent/font.html
@@ -10,6 +10,7 @@
 		<script src="../js/echarts.min.js"></script>
 		<link rel="stylesheet" href="../css/bootstrap.min.css" />
 		<link rel="stylesheet" type="text/css" href="../css/superstyle.css" />
+		<link rel="stylesheet" type="text/css" href="../css/Analyststyle.css" />
 		<link rel="stylesheet" type="text/css" href="../css/base.css" />
 	</head>
 
