--- a/WebContent/img/png.htm
+++ b/WebContent/img/png.htm
@@ -978,9 +978,9 @@ div.WordSection3
  </o:shapelayout></xml><![endif]-->
 </head>
 
-<body lang=ZH-CN style='tab-interval:21.0pt;text-justify-trim:punctuation'>
+<body lang=ZH-CN style='tab-interval:21.0pt;text-justify-trim:punctuation;background-color: #e3edfc'>
 
-<h1><a href="http://localhost:8080/Accident">返回首页</a></h1>
+<center><h1><a href="http://localhost:8080/Accident">返回首页</a></h1></center>
 <div class=WordSection1 style='layout-grid:15.6pt'>
 
 <p class=MsoNormal align=center style='text-align:center'><span lang=EN-US><!--[if gte vml 1]><v:shapetype
